Add documentation for user talks route
